--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -12,6 +12,8 @@ dependencies:
   firebase_core: ^2.32.0
   cloud_firestore: ^4.15.1
   flutter_launcher_icons: ^0.13.1
+  firebase_auth: ^4.17.8
+  google_sign_in: ^6.2.1
 
 dev_dependencies:
   flutter_test:
