--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -11,6 +11,8 @@ dependencies:
     sdk: flutter
   firebase_core: ^2.32.0
   cloud_firestore: ^4.15.1
+  firebase_auth: ^4.17.4
+  google_sign_in: ^6.2.1
   flutter_launcher_icons: ^0.13.1
 
 dev_dependencies:
