--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -14,6 +14,7 @@ dependencies:
   firebase_auth: ^4.17.4
   google_sign_in: ^6.2.1
   flutter_launcher_icons: ^0.13.1
+  provider: ^6.1.1
 
 dev_dependencies:
   flutter_test:
