Implementación de splash screen personalizado en Flutter

--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -23,6 +23,9 @@ dev_dependencies:
 
 flutter:
   uses-material-design: true
+  assets:
+    - assets/icon/maria-almenara.png
+    - assets/logo_splash.png
 
 flutter_launcher_icons:
   android: true
