--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -15,7 +15,8 @@ dependencies:
   google_sign_in: ^6.2.1
   flutter_launcher_icons: ^0.13.1
   provider: ^6.1.1
-
+  image_picker: ^1.1.2
+  image: ^4.5.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
